--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,8 @@
-platform :ios, '7.0'
+source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '8.0'
+use_frameworks!
 
 inhibit_all_warnings!
 
-pod 'CADRACSwippableCell',                    '~> 0.0.1'
+target "CADRACSwippableCell"
+    pod 'CADRACSwippableCell',          '~> 0.0.1'
